--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "yuri-gagarin",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
