--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "mongoose": "^5.4.10",
     "request": "^2.88.0"
   },
   "devDependencies": {
